    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
20-Jul-2004
   Problems fixed:
       1. bug #990914: WebFrame scriptables are now accessible by getElementById

 9-Jul-2004
   Additions:
       1. rfe #974791: WebForm now supports submitNoButton to submit a form without any of its buttons. This permits
          testing of server response to a Javascript-style submit without using JavaScript.

   Problems fixed:
       1. bug #986397: Subframe included fragments in their source attributes now ignore those fragments when generating requests.

29-Jun-2004
   Problems fixed:
       1. bug #805921: WebForm.selectImageButtonPosition was misleadingly public and should not have been used.
          It has been made package-private, and new means are provided to submit positional image buttons (see additions).
       2. bug #982097: http urls being used as request parameters were being mangled
       3. bug #803041: HTML entity &amp; now recognized in refresh URL tag
       4. bug #803095: Absolute URLs now supported in refresh URL tag

   Additions:
       1. rfe #766768: getText() methods now translate <br> tags as newlines.
       2. HttpUnit now catches an attempt to load an included script from a page included with "getResource" rather than
          "getResponse."
       3. Click positions on image buttons may now be specified using one of:
          form.submit( button, x, y )
          button.click( x, y )

28-Jun-2004
   Additions:
       1. rfe #901172: "text/xhtml" is now recognized as a valid HTML "content-type"

   Problems fixed:
       1. bug #959918: Javascript setting of numeric values included trailing zeros after the decimal point.